feat: Implement theme context and support for light/dark mode

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -309,8 +309,11 @@
   line-height: 6.2px;
 }
 
-
-
+.btn-light {
+    --primary: #ffffff;
+    --shadow-primary: #000000;
+    --color: black;
+}
 
 
 /* .layout-main {
