feat: Enhance theme support across components and styles

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -315,6 +315,10 @@
     --color: black;
 }
 
+.icon-light {
+    filter: invert(1);
+}
+
 
 /* .layout-main {
   background: linear-gradient(-45deg, #0a0a0a, #000000, #000000, #000000);
