feat: Integrate theme context in Card component and update styles for light/dark mode in buttons menu

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -315,6 +315,11 @@
     --color: black;
 }
 
+.input:checked+.btn.btn-light {
+  --primary: #000000;
+  color: white;
+}
+
 .icon-light {
     filter: invert(1);
 }
