--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   height: 100vh;
   transition: background-color 0.3s ease, color 0.3s ease;
   background-color: var(--background);
+  overflow-x: hidden;
 }
 
 a,
